--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="headshot">
-        <img src="images/hero-headshot.webp" alt="john doe headshot">
+        <img src="images/IMG_20240615_064746_365.jpg" alt="john doe headshot">
       </div>
     </section>
 
