--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="cells">
         <div class="cell">
-          <img src="images/html-logo.webp" alt="html logo">
+          <img src="images/CB.jpg" alt="html logo">
           <span>HTML</span>
         </div>
         
