--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="left">
-      <a href="/">Tilak Popat</a>
+      <a href="https://www.linkedin.com/in/tilak-popat-9438042b7">Tilak Popat</a>
     </div>
 
     <div class="right">
