--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="styles.css">
 
-  <title>Portfolio</title>
+  <title>Website</title>
 </head>
 <body>
   <!-- NAVBAR -->
